--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "^1.7.2",
     "joi": "^17.7.0",
     "lint": "^0.8.19",
+    "mongoose": "^6.9.2",
     "morgan": "1.10.0",
     "uuid": "^3.4.0"
   },
