--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bson-objectid": "^2.0.4",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -16,6 +17,7 @@
     "express": "4.17.1",
     "http-errors": "^1.7.2",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "lint": "^0.8.19",
     "mongoose": "^6.9.2",
     "morgan": "1.10.0",
@@ -28,6 +30,6 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "nodemon": "^2.0.15"
   }
 }
