--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "bson-objectid": "^2.0.4",
     "cors": "2.8.5",
@@ -17,6 +18,7 @@
     "express": "4.17.1",
     "gravatar": "^1.8.2",
     "http-errors": "^1.7.2",
+    "jest": "^29.5.0",
     "jimp": "^0.22.7",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
@@ -24,6 +26,8 @@
     "mongoose": "^6.9.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.1",
+    "nodemailer": "^6.9.1",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
